--- a/image_processing/task1-grayscale_slider/css/index.css
+++ b/image_processing/task1-grayscale_slider/css/index.css
@@ -1,13 +1,23 @@
 .sliders-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   max-width: 400px;
   margin: 0 auto;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
 }
 
 .slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   margin: 0 30px;
 }
@@ -15,6 +25,12 @@
 .slider-value {
   font-size: 20px;
   font-weight: 500;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  min-width: 60px;
+  text-align: center;
 }
 
 .slider-container {
@@ -22,8 +38,6 @@
   height: 100px;
   margin-top: 10px;
   background: black;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
   border-radius: 20px;
 }
 
@@ -31,8 +45,6 @@
   width: 100%;
   height: 100%;
   background: #e6e6e6;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
   border-radius: 20px;
 }
 
@@ -43,7 +55,30 @@
   position: relative;
   left: -2.5px;
   top: -10px;
-  -webkit-border-radius: 2px 20px 20px 20px;
-  -moz-border-radius: 20px;
   border-radius: 20px;
+}
+
+.content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 900px;
+  margin: 0 auto;
+}
+
+.form-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.image-canvas {
+  margin: 1rem 0;
 }
