--- a/src/components/app/styles.css
+++ b/src/components/app/styles.css
@@ -5,3 +5,28 @@
   width: 100%;
   height: 100%;
 }
+
+.tabHeader {
+  padding: 0.75rem 1.5rem;
+  background: white;
+}
+
+.tabLayout {
+  padding: 0.75rem 1rem;
+  background: rgb(244, 245, 250);
+  width: 100%;
+}
+
+.newImageButton {
+  display: flex;
+  text-align: left;
+  border-radius: 10px;
+  border: none;
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
+  width: 100%;
+  white-space: nowrap;
+  background: rgb(113, 59, 217);
+  color: white;
+  font-weight: 500;
+}
