--- a/src/components/app/styles.scss
+++ b/src/components/app/styles.scss
@@ -14,26 +14,13 @@
 .tabLayout {
   padding: 0.75rem 1rem;
   background: rgb(244, 245, 250);
-  width: 100%;
+  max-width: 200px;
 }
 
-.newImageButton {
-  display: flex;
-  align-items: center;
-  text-align: left;
-  border-radius: 10px;
-  border: none;
-  padding: 0.75rem 1.5rem;
-  font-size: 1rem;
-  width: 100%;
-  white-space: nowrap;
-  background: rgb(113, 59, 217);
-  color: white;
-  font-weight: 500;
+.canvas {
+  margin: 1rem auto;
+}
 
-  img {
-    width: 18px;
-    height: 18px;
-    margin-left: 14px;
-  }
+.canvas canvas {
+  border-radius: 4px;
 }
